# Ahang

./: .gitignore  CMakeLists.txt  Code of Conduct.Md  README.md  README.persian.md
src/: about_dialog.cpp  about_dialog.hpp  ahang_utils.cpp  ahang_utils.hpp  blacklistformats.cpp  blacklistformats.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  music_player.cpp  music_player.hpp  tagreader.cpp  tagreader.hpp
ui/: about.html  index.html  index_maybe.html  style.css
